# TrajectoryMatching

./: .gitignore  README.md  pyproject.toml  run.py
src/Trajectory_Matching/: Main.py  __init__.py
src/Trajectory_Matching/Utils/: filter_tracks.py  io_utils.py  json_utils.py  trajectory_utils.py  utils.py
src/Trajectory_Matching/average_traj/: __init__.py  trajectory_analysis.py
src/Trajectory_Matching/detect_occlusion/: auto_occlusion_detect.py  track_re_link.py
src/Trajectory_Matching/feature_extractor/: Base-bagtricks.yml  config.py  extractor.py  sbs_R50-ibn.yml  utils.py
src/Trajectory_Matching/feature_extractor/fastreid/data/: build.py
src/Trajectory_Matching/feature_extractor/fastreid/data/datasets/: AirportALERT.py  caviara.py  cuhk03.py  grid.py  iLIDS.py  lpw.py  pes3d.py  pku.py  prai.py  prid.py  saivt.py  sensereid.py  shinpuhkan.py  sysu_mm.py  thermalworld.py
src/Trajectory_Matching/feature_extractor/fastreid/engine/: defaults.py  train_loop.py
src/Trajectory_Matching/feature_extractor/fastreid/modeling/backbones/regnet/: regnet.py
src/Trajectory_Matching/feature_extractor/reid_inference/: reid_model.py
src/Trajectory_Matching/feature_extractor/reid_inference/baseline/model/: make_model.py
src/Trajectory_Matching/feature_extractor/reid_inference/baseline/model/backbones/: resnet_ibn_a.py
src/Trajectory_Matching/group_trajectories/: Generate_track_zones.py  Group_traj.py
test_ideas/: test.py  trajectory_assign(live running assignment).py
