[project]
name = "trajectoryinit"
version = "0.1.0"
description = "Takes MOT tracks and a corresponding video to parameterise the scene trajectories and zones, to enhance motion prediction and tracking"
authors = [
    {name = "SLocs123",email = "sl2726@bath.ac.uk"}
]
requires-python = ">=3.11"
dependencies = [
    "numpy (>=1.26,<3.0)",
    "opencv-python (>=4.8,<5.0)",
    "torch (>=2.1,<3.0)",
    "torchvision (>=0.16,<1.0)",
    "pydantic (>=2.7,<3.0)",
    "pydantic-settings (>=2.2,<3.0)",
    "typing-extensions (>=4.9,<5.0)",
    "scipy (>=1.11,<2.0)",
    "scikit-learn (>=1.3,<2.0)",
    "yacs (>=0.1.8,<1.0)",
    "pyyaml (>=6.0,<7.0)",
    "pillow (>=10.0,<12.0)",
    "tabulate (>=0.9,<1.0)",
    "termcolor (>=2.4,<3.0)",
    "tensorboard (>=2.16,<3.0)",
    "numba (>=0.64.0,<0.65.0)",
    "shapely (>=2.1.0,<3.0)",
    "dtaidistance (>=2.4.0,<3.0.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
